--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
 <script>
   function testAnim(x) {
-    $('#viewer').removeClass().addClass(x + ' animated').one('webkitAnimationEnd mozAnimationEnd MSAnimationEnd oanimationend animationend', function(){
+    $('#viewer').removeClass().addClass(x + ' apertured').one('webkitAnimationEnd mozAnimationEnd MSAnimationEnd oanimationend animationend', function(){
       $(this).removeClass();
     });
   };
